plugins {
    id 'java'
    id 'org.springframework.boot' version '2.6.4'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.kafka:spring-kafka:2.8.0'
    implementation 'com.opencsv:opencsv:4.1'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    // Apache Spark dependencies
    implementation 'org.apache.spark:spark-core_2.12:3.4.0'
    implementation 'org.apache.spark:spark-streaming_2.12:3.4.0'
    implementation 'org.apache.spark:spark-sql_2.12:3.4.0'
    implementation('org.apache.spark:spark-streaming-kafka-0-10_2.12:3.4.0') {
        exclude group: 'org.apache.kafka', module: 'kafka-clients'
    }

    // Twitter4j dependencies
    implementation 'com.twitter:hbc-core:2.2.0'
    implementation 'com.twitter:hbc-twitter4j:2.2.0'

    // Stanford CoreNLP dependencies
    implementation 'edu.stanford.nlp:stanford-corenlp:4.2.2'
    implementation 'edu.stanford.nlp:stanford-corenlp:4.2.2:models'

    // Other dependencies (optional)
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.16.1' // For JSON serialization/deserialization
    implementation 'org.apache.commons:commons-lang3:3.12.0' // For utility functions
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
    useJUnitPlatform()
    jvmArgs = ['--add-opens=java.base/java.nio=ALL-UNNAMED', '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED']
}
